tests/errors/semantic/blocking/MISSING_TYPE_ALIAS.py
# pylint: disable=missing-module-docstring

S = int
